[package]
name = "eframe_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.20.1"
reqwest = "0.11.14"
rss = "2.0.2"
futures = "0.3.25"
tokio = {version = "1.24.2", features = ["full"]}
epi = "0.17.0"
egui = "0.20.1"